index.html.erbを呟き一覧画面とし、viewの成形とコントローラを編集した。

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Tweets#index</h1>
-<p>Find me in app/views/tweets/index.html.erb</p>
+<h1>卍　呟き一覧　卍</h1>
+
+<table>
+  <% @tweets.each do |tweet| %>
+   <tr>
+     <td><%=  tweet.content %></td>
+   </tr>
+  <% end %>
+</table>
