--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,6 +4,7 @@
   <% @tweets.each do |tweet| %>
    <tr>
      <td><%=  tweet.content %></td>
+     <td><%= link_to '詳細を確認する', tweet_path(tweet.id) %></td>
    </tr>
   <% end %>
 </table>
