--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,6 +5,7 @@
    <tr>
      <td><%=  tweet.content %></td>
      <td><%= link_to '詳細を確認する', tweet_path(tweet.id) %></td>
+     <td><%= link_to "呟きを編集する", edit_tweet_path(tweet.id) %><td>
    </tr>
   <% end %>
 </table>
