細かいミスを修正

--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,6 +1,9 @@
-<%= form_with(model: @tweet, local:true) do |form| %>
+<h1>新規投稿画面</h1>
 
-<% if @tweet.errors.any? %>
+<%= render 'form' %>
+
+<!-- <%= form_with(model: @tweet, local:true) do |form| %> -->
+<!-- <% if @tweet.errors.any? %>
     <div id="error_explanation">
       <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
       <ul>
@@ -20,4 +23,4 @@
   <%= form.submit %>
 <% end %>
 
-<%= link_to 'ブログ一覧画面にもどる', tweets_path %>
+<%= link_to 'ブログ一覧画面にもどる', tweets_path %> -->
