--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,6 +1,5 @@
-<%= form_with(model: @tweet, local:true) do |form| %>
-
-<% if @tweet.errors.any? %>
+<%= form_with(model: @tweet, local:true, url: choose_new_or_edit) do |form| %>
+  <% if @tweet.errors.any? %>
     <div id="error_explanation">
       <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
       <ul>
