--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -2,3 +2,78 @@
 <p>呟き内容: <%= @tweet.content %></p>
 
 <%= link_to 'ブログ一覧画面にもどる', tweets_path %>
+
+<body>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="sample">
+    <p>position:static</p>
+    <div class="sample1">
+      <p>staticの場合の表示</p>
+    </div>
+  </div>
+  <div class="sample">
+    <p>position:relative</p>
+    <div class="sample2">
+      <p>relativeの場合の表示</p>
+    </div>
+  </div>
+  <div class="sample">
+    <p>position:absolute</p>
+    <div class="sample3">
+      <p>absoluteの場合の表示</p>
+    </div>
+  </div>
+  <div class="sample">
+    <p>position:fixed</p>
+    <div class="sample4">
+      <p>fixedの場合の表示</p>
+    </div>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+  <div class="dummy">
+    <p>ダミー</p>
+  </div>
+</body>
