css編集の基礎を大須賀くんに教えてもらった。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <header>
+      <%= link_to 'top', tweets_path %>
+      <%= link_to '新規投稿画面へ', new_tweet_path %>
+      <%= link_to 'ブログ一覧画面にもどる', list_tweets_path %>
+    </header>
     <%= yield %>
   </body>
 </html>
